result found button

--- a/archive.css
+++ b/archive.css
@@ -1,9 +1,15 @@
 #search{
     margin: 0 auto;
 }
-#result-show-btn{
+#spinner{
     display: none;
 }
+/* #book-archive{
+    display: inline-flex;
+} */
+/* #result-show-btn{
+    display: none;
+} */
 #container{
     margin: 120px 250px 0 250px;
 }
